--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = be06b7e
-	trimbase = 
+	trim = thormang3_offset_tuner_server
+	base = 6f61555
+	trimbase = be06b7e
 	parent = upstream
 	previous = ec64eed
