--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 28587cc
-	trimbase = 
+	trim = thormang3_tools
+	base = 7f0a0db
+	trimbase = 28587cc
 	parent = upstream
 	previous = ec64eed
