--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7f0a0db
+	base = e4a918a
 	trimbase = 
 	parent = release/kinetic/thormang3_tools
-	previous = 
+	previous = 7f0a0db
