--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d4f6330
+	base = ff06ccf
 	trimbase = 
 	parent = debian/kinetic/thormang3_tools
-	previous = 
+	previous = d4f6330
