--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 082d4e2
+	base = ca1cb5a
 	trimbase = 
 	parent = debian/kinetic/thormang3_offset_tuner_server
-	previous = 
+	previous = 082d4e2
