--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e4b7194
+	base = f7af9c5
 	trimbase = 
 	parent = debian/kinetic/thormang3_tools
-	previous = 
+	previous = e4b7194
