--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f547a53
+	base = 354a840
 	trimbase = 
 	parent = debian/kinetic/thormang3_offset_tuner_server
-	previous = 
+	previous = f547a53
