--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5e64544
+	base = de72750
 	trimbase = 
 	parent = rpm/kinetic/thormang3_tools
-	previous = 
+	previous = 5e64544
