--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6f61555
+	base = 9ce3cb5
 	trimbase = 
 	parent = release/kinetic/thormang3_offset_tuner_server
-	previous = 
+	previous = 6f61555
