--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d79dca0
+	base = 83f820f
 	trimbase = 
 	parent = rpm/kinetic/thormang3_offset_tuner_server
-	previous = 
+	previous = d79dca0
