--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = thormang3_offset_tuner_server
-	base = bb033fc
-	trimbase = 
+	base = be32327
+	trimbase = bb033fc
 	parent = upstream
 	previous = ea5a1ca
