--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = e217522
-	trimbase = 
+	trim = thormang3_action_editor
+	base = 23396e3
+	trimbase = e217522
 	parent = upstream
 	previous = ea5a1ca
