--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = thormang3_tools
-	base = 66c0d8e
-	trimbase = 
+	base = 73cb770
+	trimbase = 66c0d8e
 	parent = upstream
 	previous = ea5a1ca
