--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 23396e3
+	base = e71b967
 	trimbase = 
 	parent = release/kinetic/thormang3_action_editor
-	previous = 
+	previous = 23396e3
