--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 38e3e69
+	base = beffbed
 	trimbase = 
 	parent = debian/kinetic/thormang3_action_editor
-	previous = 
+	previous = 38e3e69
