--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1efe2a0
+	base = 4c693a0
 	trimbase = 
 	parent = debian/kinetic/thormang3_action_editor
-	previous = 
+	previous = 1efe2a0
