--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c6b6d70
+	base = 7c6f712
 	trimbase = 
 	parent = rpm/kinetic/thormang3_action_editor
-	previous = 
+	previous = c6b6d70
