--- a/thormang3_tools/package.xml
+++ b/thormang3_tools/package.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0"?>
 <package>
   <name>thormang3_tools</name>
-  <version>0.1.1</version>
+  <version>0.1.2</version>
   <description>ROS packages for the thormang3_tools (meta package)</description>
   <license>BSD</license>
+  <author email="sch@robotis.com">SCH</author>
   <author email="hjsong@robotis.com">Jay Song</author>
   <author email="kmjung@robotis.com">Kayman</author>
   <maintainer email="pyo@robotis.com">Pyo</maintainer>
