--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = thormang3_offset_tuner_server
-	base = 118cb12
-	trimbase = 
+	base = 95fd698
+	trimbase = 118cb12
 	parent = upstream
 	previous = fa0e903
