--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = thormang3_offset_tuner_server
 	base = be32327
-	trimbase = bb033fc
+	trimbase = 
 	parent = upstream
 	previous = ea5a1ca
