--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = thormang3_action_editor
-	base = fc2488b
-	trimbase = 
+	base = a96cce1
+	trimbase = fc2488b
 	parent = upstream
 	previous = fa0e903
