--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = thormang3_tools
-	base = ca05554
-	trimbase = 
+	base = 72c3b70
+	trimbase = ca05554
 	parent = upstream
 	previous = fa0e903
