--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.1.1-0": ["Tue Apr 25 2017", "Pyo", "pyo@robotis.com"]}
+{"0.1.1-0": ["Tue Apr 25 2017", "Pyo", "pyo@robotis.com"], "0.1.2-0": ["Wed May 24 2017", "Pyo", "pyo@robotis.com"]}
