--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = thormang3_offset_tuner_server
-	base = fdf1ac5
-	trimbase = 
+	base = 1e10820
+	trimbase = fdf1ac5
 	parent = upstream
 	previous = fa0e903
