--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = thormang3_action_editor
-	base = a8c1c28
-	trimbase = 
+	base = ab904e5
+	trimbase = a8c1c28
 	parent = upstream
 	previous = fa0e903
