--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = thormang3_tools
-	base = 9fc24d9
-	trimbase = 
+	base = bce3b2e
+	trimbase = 9fc24d9
 	parent = upstream
 	previous = fa0e903
