--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bce3b2e
+	base = 84369ff
 	trimbase = 
 	parent = release/kinetic/thormang3_tools
-	previous = 
+	previous = bce3b2e
