--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9b765f7
+	base = 3979276
 	trimbase = 
 	parent = arch/kinetic/thormang3_tools
-	previous = 
+	previous = 9b765f7
