--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ab904e5
+	base = 4da137c
 	trimbase = 
 	parent = release/kinetic/thormang3_action_editor
-	previous = 
+	previous = ab904e5
