--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4cd9a26
+	base = dc7752a
 	trimbase = 
 	parent = arch/kinetic/thormang3_action_editor
-	previous = 
+	previous = 4cd9a26
