--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1e10820
+	base = 590dc3f
 	trimbase = 
 	parent = release/kinetic/thormang3_offset_tuner_server
-	previous = 
+	previous = 1e10820
