--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 03505a0
+	base = 6cf15f0
 	trimbase = 
 	parent = arch/kinetic/thormang3_offset_tuner_server
-	previous = 
+	previous = 03505a0
